--- a/app/src/main/res/layout/pick_network.xml
+++ b/app/src/main/res/layout/pick_network.xml
@@ -51,10 +51,12 @@
         android:clickable="true"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
         android:id="@+id/ok"
+        android:background="@drawable/network_dialog_button"
         android:text="OK"
+        android:layout_gravity="center"
         android:clickable="true"/>
 
 </LinearLayout>
